navbar vertical align fix

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11666,6 +11666,17 @@ html {
   border-radius: 0 0 0.25rem 0.25rem;
 }
 
+.navbar-nav .dropdown-toggle::after {
+  display: inline-block;
+  margin-left: 0.255em;
+  vertical-align: 0.1em;
+  content: "";
+  border-top: 0.3em solid;
+  border-right: 0.3em solid transparent;
+  border-bottom: 0;
+  border-left: 0.3em solid transparent;
+}
+
 .icon-bar {
   width: 22px;
   height: 2px;
