--- a/resources/sass/_navbar.scss
+++ b/resources/sass/_navbar.scss
@@ -48,6 +48,17 @@
     border-radius: 0 0 0.25rem 0.25rem;
 }
 
+.navbar-nav .dropdown-toggle::after {
+    display: inline-block;
+    margin-left: 0.255em;
+    vertical-align: 0.1em;
+    content: "";
+    border-top: 0.3em solid;
+    border-right: 0.3em solid transparent;
+    border-bottom: 0;
+    border-left: 0.3em solid transparent;
+}
+
 .icon-bar {
     width: 22px;
     height: 2px;
@@ -90,7 +101,9 @@
 }
 
 @media (min-width: 1200px) {
-    .navbar-expand-md .navbar-nav .nav-link, .navbar-expand-lg .navbar-nav .nav-link {
+
+    .navbar-expand-md .navbar-nav .nav-link,
+    .navbar-expand-lg .navbar-nav .nav-link {
         padding-right: 1rem;
         padding-left: 1rem;
     }
